# 1satOrdinals_NFT

./: .gitignore  LICENSE.md  pyproject.toml
data/: tx1.txt
example/: createTestNFT.py
